force-app/main/default/objects/ht_Logger__c/ht_Logger__c.object-meta.xml
<CustomObject>
    <label>NIPR Logger</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>