force-app/main/default/objects/ht_Logger__c/fields/ht_Critical__c.field-meta.xml
<CustomField>
    <fullName>d4c_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if System error is critical and should be reported on, either via Email or some kind of notification.</description>
    <label>Critial</label>
    <type>Checkbox</type>
</CustomField>