force-app/main/default/objects/ht_Logger__c/fields/ht_Details__c.field-meta.xml
<CustomField>
    <fullName>ht_Details__c</fullName>
    <inlineHelpText>Captures the actual error message or log details.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>