force-app/main/default/objects/ht_Logger__c/fields/ht_LogLevel__c.field-meta.xml
<CustomField>
    <fullName>d4c_LogLevel__c</fullName>
    <inlineHelpText>Defines the severity of the log: Info, Debug, Warning, Error.</inlineHelpText>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>