force-app/main/default/objects/ht_Logger__c/fields/ht_Message__c.field-meta.xml
<CustomField>
    <fullName>d4c_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>