force-app/main/default/objects/ht_Logger__c/fields/ht_OccurredDateTime__c.field-meta.xml
<CustomField>
    <fullName>ht_OccurredDateTime__c</fullName>
    <inlineHelpText>Timestamp of when the log was recorded.</inlineHelpText>
    <label>Occurred Date/Time</label>
    <type>DateTime</type>
</CustomField>