force-app/main/default/objects/ht_Logger__c/fields/ht_RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>ht_RelatedRecord__c</fullName>
    <inlineHelpText>Links the log to a specific Salesforce record if applicable.</inlineHelpText>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>