force-app/main/default/objects/ht_Logger__c/fields/ht_Source__c.field-meta.xml
<CustomField>
    <fullName>ht_Source__c</fullName>
    <inlineHelpText>Indicates whether the log originates from Apex or Flow.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>