force-app/main/default/objects/ht_Logger__c/fields/ht_SourceMethod__c.field-meta.xml
<CustomField>
    <fullName>ht_SourceMethod__c</fullName>
    <inlineHelpText>Stores the Apex Method or Flow Element name (if applicable).</inlineHelpText>
    <label>Method / Flow Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>