force-app/main/default/objects/ht_Logger__c/fields/ht_SourceName__c.field-meta.xml
<CustomField>
    <fullName>d4c_SourceName__c</fullName>
    <inlineHelpText>Stores the Apex Class name or Flow Name where the log originated.</inlineHelpText>
    <label>Apex Class / Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>