force-app/main/default/objects/ht_Logger__c/fields/ht_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>ht_StackTrace__c</fullName>
    <inlineHelpText>Stores a stack trace for Apex logs (optional).</inlineHelpText>
    <label>Stack Trace</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>