force-app/main/default/objects/ht_Logger__c/fields/ht_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>ht_TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>