force-app/main/default/objects/ht_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ht_LogLevel__c</columns>
    <columns>ht_Critical__c</columns>
    <columns>ht_Details__c</columns>
    <columns>ht_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>