force-app/main/default/objects/ht_Logger__c/listViews/ht_Critical_Logs.listView-meta.xml
<ListView>
    <fullName>ht_Critical_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ht_LogLevel__c</columns>
    <columns>ht_Critical__c</columns>
    <columns>ht_Details__c</columns>
    <columns>ht_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ht_Critical__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Critical Logs</label>
</ListView>