force-app/main/default/objects/ht_Logger__c/listViews/ht_Error_Logs.listView-meta.xml
<ListView>
    <fullName>d4c_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>d4c_LogLevel__c</columns>
    <columns>d4c_Critical__c</columns>
    <columns>d4c_Details__c</columns>
    <columns>d4c_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>d4c_LogLevel__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Error Logs</label>
</ListView>