force-app/main/default/objects/ht_Logger__c/listViews/ht_Info_Logs.listView-meta.xml
<ListView>
    <fullName>ht_Info_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ht_LogLevel__c</columns>
    <columns>ht_Critical__c</columns>
    <columns>ht_Details__c</columns>
    <columns>ht_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ht_LogLevel__c</field>
        <operation>notEqual</operation>
        <value>Error</value>
    </filters>
    <label>Info Logs</label>
</ListView>